--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -184,6 +184,7 @@
         "core_menu_top_label": "Menubar: Top Section",
         "core_midi_controls_banks_label": "MIDI: Banks",
         "core_midi_manager_label": "Manager: MIDI",
+        "core_midi_prefs_label": "Preferences Panel: MIDI",
         "core_preferences_advanced_label": "Preferences: Advanced",
         "core_preferences_general_label": "Preferences: General",
         "core_preferences_generate_label": "Preferences: Generate",
@@ -192,12 +193,10 @@
         "core_preferences_panels_advanced_label": "Preferences Panel: Advanced",
         "core_preferences_panels_general_label": "Preferences Panel: General",
         "core_preferences_panels_menubar_label": "Preferences Panel: Menubar",
-        "core_preferences_panels_midi_label": "Preferences Panel: MIDI",
         "core_preferences_panels_notifications_label": "Preferences: Notifications",
         "core_preferences_panels_plugins_label": "Preferences Panel: Plugins",
         "core_preferences_panels_shortcuts_label": "Preferences Panel: Shortcuts",
         "core_preferences_panels_tangent_label": "Preferences Panel: Tangent",
-        "core_preferences_panels_touchbar_label": "Preferences: Touch Bar",
         "core_preferences_updates_label": "Preferences: Updates",
         "core_setup_label": "Manager: Setup",
         "core_tangent_actions_label": "Tangent: ComandPost Actions Support",
@@ -213,6 +212,7 @@
         "core_tangent_os_window_label": "Tangent: Windows Management",
         "core_tangent_prefs_label": "Tangent: Preferences",
         "core_touchbar_manager_label": "Manager: Touch Bar",
+        "core_touchbar_prefs_label": "Preferences: Touch Bar",
         "core_touchbar_virtual_label": "Manager: Virtual Touch Bar",
         "core_touchbar_widgets_volume_label": "Widget: Volume Slider",
         "core_touchbar_widgets_windowslide_label": "Widget: Window Slider",
@@ -1075,6 +1075,7 @@
         "startScan": "Start Scan",
         "stillFrames": "Still Frames",
         "stills": "Stills",
+        "stop": "Stop",
         "success": "Success",
         "suggestATranslation": "Suggest A New Language",
         "suggestCompressorFeatureToApple": "Suggest Compressor Feature to Apple",
