--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -61,6 +61,7 @@
         "back": "Back",
         "backgroundRender": "Background Render",
         "badTouchBarIcon": "Only supported image files (JPEG, PNG, TIFF, GIF or BMP) are supported as Touch Bar icons.",
+        "bank": "Bank",
         "basicGrid": "Basic Grid",
         "batchExport": "Batch Export",
         "batchExportActiveTimeline": "Batch Export Active Timeline",
@@ -663,6 +664,7 @@
         "global_cmds_action": "Global Commands",
         "global_command_group": "All Applications",
         "global_midibanks_action": "MIDI Banks",
+        "global_touchbarbanks_action": "Touch Bar Banks",
         "global_widgets_action": "Global Touch Bar Widgets",
         "goTo": "Go to",
         "goToBeginning": "Go to Beginning",
@@ -768,7 +770,6 @@
         "menubarPanelTooltip": "Menubar Preferences",
         "menuChoiceSubText": "Menu: %{path}",
         "midi": "MIDI",
-        "midiBank": "MIDI Bank",
         "midiBankDescription": "Changes the MIDI Control Bank",
         "midiColorBoardDescription": "Controls the Color Board via MIDI Controls",
         "midiControlColorWheel": "Controls the Final Cut Pro Color Wheel via a MIDI Knob or Slider",
@@ -1105,6 +1106,8 @@
         "tools": "Tools",
         "topCentreOfTimeline": "Top Centre of Timeline",
         "topHorizontal": "Top Horizontal",
+        "touchBar": "Touch Bar",
+        "touchBarBankDescription": "Changes the Touch Bar Bank",
         "touchBarColorBoardDescription": "Allows you to control the %{panel} Panel of the Color Board.",
         "touchBarColorBoardGroupedDescription": "Color Board Panel Toggle Button & 4 x Puck Controls.",
         "touchBarColorBoardPuckDescription": "Allows you to control puck %{puck} of the Color Board.",
