--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -343,7 +343,7 @@
         "cpSetupWatchFolders_title": "Setup Watch Folders",
         "cpShowGrid_title": "Show Window Grid",
         "cpShowListOfShortcutKeys_title": "Show Keyboard Shortcuts",
-        "cpShowTimelineInPlayer_title": "Show Timeline in Player",
+        "cpShowTimelineInViewers_title": "Show Timeline in Viewers",
         "cpSingleMatchFrameAndHighlight_title": "Reveal Single Clip in Browser & Highlight",
         "cpStabilizationDisable_title": "Disable Stabilization",
         "cpStabilizationEnable_title": "Enable Stabilization",
@@ -527,7 +527,7 @@
         "finalcutpro_advanced_disablewaveforms_label": "Advanced: Waveform Drawing",
         "finalcutpro_advanced_fcpxml_label": "Advanced: FCPXML Import/Export Extras",
         "finalcutpro_advanced_playbackrendering_label": "Playback Rendering Controls",
-        "finalcutpro_advanced_showtimelineinplayer_label": "Advanced: Show Timeline in Player",
+        "finalcutpro_advanced_showtimelineinviewers_label": "Advanced: Show Timeline in Player",
         "finalcutpro_browser_addnote_label": "Browser: Add Note",
         "finalcutpro_browser_keywords_label": "Browser: Keyword Features",
         "finalcutpro_browser_pasteboardtomarkers_label": "Browser: Pasteboard Markers to Clip",
@@ -1050,7 +1050,7 @@
         "showHiddenFCPXMLImportOptions": "Show Hidden FCPXML Import Options",
         "showInspector": "Show Inspector",
         "showSectionHeadingsInMenubar": "Show Section Headings in Menubar",
-        "showTimelineInPlayer": "Show Timeline in Player",
+        "showTimelineInViewers": "Show Timeline in Viewers",
         "showTitles": "Show Titles",
         "showTransitions": "Show Transitions",
         "six": "6",
