--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -530,6 +530,7 @@
         "finalcutpro_advanced_playbackrendering_label": "Playback Rendering Controls",
         "finalcutpro_advanced_showtimelineinviewers_label": "Advanced: Show Timeline in Player",
         "finalcutpro_browser_addnote_label": "Browser: Add Note",
+        "finalcutpro_browser_appearanceandfiltering_label": "Browser: Appearance & Filtering",
         "finalcutpro_browser_keywords_label": "Browser: Keyword Features",
         "finalcutpro_browser_pasteboardtomarkers_label": "Browser: Pasteboard Markers to Clip",
         "finalcutpro_browser_playhead_label": "Browser: Playhead Features",
@@ -1007,6 +1008,7 @@
         "sendCrashData": "Send Crash Data (requires restart)",
         "sendTestNotification": "Send Test Notification",
         "sendToCompressor": "Send to Compressor",
+        "setBrowserDurationTo": "Set Browser Duration to",
         "setFilenamePrefix": "Set Filename Prefix",
         "setIncrementalNumber": "Set Incremental Number",
         "setIncrementalNumberError": "This value looks incorrect. Please enter a number and try again.",
