--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -93,6 +93,8 @@
         "button": "Button",
         "buttonLabel": "Button Label",
         "cancel": "Cancel",
+        "changeBrowserClipHeightDown_title": "Browser Clip Height Decrease",
+        "changeBrowserClipHeightUp_title": "Browser Clip Height Increase",
         "changeCustomFilename": "Change Custom Filename",
         "changeDestinationFolder": "Change Destination Folder",
         "changeDestinationFolderInCompressor": "Change Destination Folder in Compressor",
@@ -531,6 +533,7 @@
         "finalcutpro_advanced_showtimelineinviewers_label": "Advanced: Show Timeline in Player",
         "finalcutpro_browser_addnote_label": "Browser: Add Note",
         "finalcutpro_browser_appearanceandfiltering_label": "Browser: Appearance & Filtering",
+        "finalcutpro_browser_height_label": "Browser: Clip Height",
         "finalcutpro_browser_keywords_label": "Browser: Keyword Features",
         "finalcutpro_browser_pasteboardtomarkers_label": "Browser: Pasteboard Markers to Clip",
         "finalcutpro_browser_playhead_label": "Browser: Playhead Features",
