--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -213,6 +213,7 @@
         "core_tangent_os_sound_label": "Tangent: macOS Sound Controls",
         "core_tangent_os_window_label": "Tangent: Windows Management",
         "core_tangent_prefs_label": "Tangent: Preferences",
+        "core_touchbar_banks_label": "Touchbar: Banks",
         "core_touchbar_manager_label": "Manager: Touch Bar",
         "core_touchbar_prefs_label": "Preferences: Touch Bar",
         "core_touchbar_virtual_label": "Manager: Virtual Touch Bar",
