--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -95,8 +95,6 @@
         "cancel": "Cancel",
         "changeBrowserClipHeightDown_title": "Browser Clip Height Decrease",
         "changeBrowserClipHeightUp_title": "Browser Clip Height Increase",
-        "changeBrowserDurationDown_title": "Browser Duration Decrease",
-        "changeBrowserDurationUp_title": "Browser Duration Increase",
         "changeCustomFilename": "Change Custom Filename",
         "changeDestinationFolder": "Change Destination Folder",
         "changeDestinationFolderInCompressor": "Change Destination Folder in Compressor",
@@ -536,7 +534,6 @@
         "finalcutpro_advanced_showtimelineinviewers_label": "Advanced: Show Timeline in Player",
         "finalcutpro_browser_addnote_label": "Browser: Add Note",
         "finalcutpro_browser_appearanceandfiltering_label": "Browser: Appearance & Filtering",
-        "finalcutpro_browser_duration_label": "Browser: Duration",
         "finalcutpro_browser_height_label": "Browser: Clip Height",
         "finalcutpro_browser_keywords_label": "Browser: Keyword Features",
         "finalcutpro_browser_pasteboardtomarkers_label": "Browser: Pasteboard Markers to Clip",
@@ -652,6 +649,7 @@
         "finalCutProPanelTooltip": "Final Cut Pro Preferences",
         "finalCutProTimelineBatchExportMessage": "Final Cut Pro will export the %{clipCountString}selected %{itemString} in the timeline to the following location:",
         "finder": "Finder",
+        "finder_dateandtime_label": "Finder: Date & Time",
         "finder_pasteboard_label": "Finder: Pasteboard Tools",
         "finder_texttools_label": "Text Tools",
         "finder_window_label": "Window Management",
@@ -1139,6 +1137,7 @@
         "trim": "Trim",
         "trimToPlayhead": "Trim To Playhead",
         "two": "2",
+        "typeDateAndTime_title": "Type Date & Time",
         "unassigned": "Unassigned",
         "undo": "Undo",
         "uninstall": "Uninstall",
