--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -539,6 +539,7 @@
         "finalcutpro_browser_duration_label": "Browser: Duration",
         "finalcutpro_browser_height_label": "Browser: Clip Height",
         "finalcutpro_browser_keywords_label": "Browser: Keyword Features",
+        "finalcutpro_browser_layouts_label": "Browser: Save & Restore Layouts",
         "finalcutpro_browser_pasteboardtomarkers_label": "Browser: Pasteboard Markers to Clip",
         "finalcutpro_browser_playhead_label": "Browser: Playhead Features",
         "finalcutpro_browser_soloclip_label": "Browser: Solo Clip",
@@ -975,12 +976,14 @@
         "resetShortcutsAllToNone": "Set All Shortcuts to None",
         "restart": "Restart",
         "restore": "Restore",
+        "restoreBrowserLayoutToMemory": "Restore Browser Layout to Memory",
         "reverse": "Reverse",
         "right": "Right",
         "rightVertical": "Right Vertical",
         "saturation": "Saturation",
         "saturation4": "Sat",
         "save": "Save",
+        "saveBrowserLayoutToMemory": "Save Browser Layout to Memory",
         "saveColorEffectPreset": "Save Color Effect Preset",
         "saveCurrentFrameToStillsMemory": "Save Current Frame to Stills Memory",
         "savedToPasteboardBuffer": "Saved to Pasteboard Buffer %{id}",
