--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -60,6 +60,8 @@
         "autoUnmountOnBattery": "Unmount external drives when switching to battery power",
         "back": "Back",
         "backgroundRender": "Background Render",
+        "backupInterval": "Backup Interval",
+        "backupMinimumDuration": "Backup Minimum Duration",
         "badTouchBarIcon": "Only supported image files (JPEG, PNG, TIFF, GIF or BMP) are supported as Touch Bar icons.",
         "bank": "Bank",
         "basicGrid": "Basic Grid",
@@ -534,6 +536,7 @@
         "fileCouldNotBeRead": "The selected file could not be read.",
         "finalCutPro": "Final Cut Pro",
         "finalcutpro_actions_custom_label": "Shortcuts: Custom Actions",
+        "finalcutpro_advanced_backupinterval_label": "Advanced: Backup Interval",
         "finalcutpro_advanced_disablewaveforms_label": "Advanced: Waveform Drawing",
         "finalcutpro_advanced_fcpxml_label": "Advanced: FCPXML Import/Export Extras",
         "finalcutpro_advanced_playbackrendering_label": "Playback Rendering Controls",
@@ -645,6 +648,8 @@
         "finalcutpro_touchbar_manager_label": "Manager: Touch Bar",
         "finalcutpro_touchbar_virtual_label": "Virtual Touch Bar",
         "finalcutpro_touchbar_widgets_colorboard_label": "Widget: Color Board",
+        "finalcutpro_touchbar_widgets_duration_label": "Widget: Browser Duration Slider",
+        "finalcutpro_touchbar_widgets_height_label": "Widget: Browser Height Slider",
         "finalcutpro_touchbar_widgets_zoom_label": "Widget: Timeline Zoom",
         "finalcutpro_viewer_overlays_label": "Viewer: Overlays",
         "finalcutpro_viewer_timecodeoverlay_label": "Viewer: Timecode Overlay",
@@ -973,6 +978,7 @@
         "reportMotionBugToApple": "Report Motion Bug to Apple",
         "reset": "Reset",
         "resetAllControls": "Reset All Controls",
+        "resetBrowserLayoutForSelectedCollection_title": "Reset Browser Layout for Selected Collection",
         "resetCurrentEffectPane": "Reset Current Effect Pane",
         "resetIncrementalNumber": "Reset Incremental Number",
         "resetSelectedControl": "Reset Selected Control",
@@ -980,6 +986,7 @@
         "resetShortcutsAllToNone": "Set All Shortcuts to None",
         "restart": "Restart",
         "restore": "Restore",
+        "restoreBrowserLayoutForSelectedCollection_title": "Restore Browser Layout for Selected Collection",
         "restoreBrowserLayoutToMemory": "Restore Browser Layout to Memory",
         "reverse": "Reverse",
         "right": "Right",
@@ -987,6 +994,7 @@
         "saturation": "Saturation",
         "saturation4": "Sat",
         "save": "Save",
+        "saveBrowserLayoutForSelectedCollection_title": "Save Browser Layout for Selected Collection",
         "saveBrowserLayoutToMemory": "Save Browser Layout to Memory",
         "saveColorEffectPreset": "Save Color Effect Preset",
         "saveCurrentFrameToStillsMemory": "Save Current Frame to Stills Memory",
@@ -1207,9 +1215,6 @@
         "yes": "Yes",
         "zoomSlider": "Zoom Slider",
         "zoomSliderDescription": "Allows you to control timeline zoom.",
-        "resetBrowserLayoutForSelectedCollection_title": "Reset Browser Layout for Selected Collection",
-        "restoreBrowserLayoutForSelectedCollection_title": "Restore Browser Layout for Selected Collection",
-        "saveBrowserLayoutForSelectedCollection_title":  "Save Browser Layout for Selected Collection",
         "zoomToFit": "Zoom to Fit",
         "zoomToSamples": "Zoom to Samples"
     }
