--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -49,6 +49,7 @@
         "appName": "CommandPost",
         "appVersion": "Version",
         "areYouConnectedToTheInternet": "Are you actually connected to the Internet?",
+        "assignAction": "Assign Action",
         "assignHUDButtons": "Assign HUD Buttons",
         "atLeastOneBrowserClipMustBeSelected": "At least one clip must be selected in the browser to use this feature.",
         "attachLog": "Attach the entire contents of the CommandPost Error Log.",
@@ -833,6 +834,7 @@
         "next": "Next",
         "nine": "9",
         "no": "No",
+        "noActionAssignedToThisButton": "No action assigned to this button.",
         "noDestinationFolderSelected": "No Destination Folder Selected",
         "noDestinationPresetSelected": "No Destination Preset Selected",
         "noDevicesDetected": "No Devices Detected",
@@ -969,6 +971,7 @@
         "reload": "Reload",
         "rememberLastQuery": "Remember Last Query",
         "removeFromList": "Remove from List",
+        "renameButton": "Rename Button",
         "renderComplete": "Render Complete!",
         "replaceExistingFiles": "Replace Existing Files",
         "replaceSpaceWithUnderscore": "Replace Spaces with Underscores",
@@ -979,6 +982,7 @@
         "reset": "Reset",
         "resetAllControls": "Reset All Controls",
         "resetBrowserLayoutForSelectedCollection_title": "Reset Browser Layout for Selected Collection",
+        "resetButton": "Reset Button",
         "resetCurrentEffectPane": "Reset Current Effect Pane",
         "resetIncrementalNumber": "Reset Incremental Number",
         "resetSelectedControl": "Reset Selected Control",
@@ -990,6 +994,7 @@
         "restoreBrowserLayoutToMemory": "Restore Browser Layout to Memory",
         "reverse": "Reverse",
         "right": "Right",
+        "rightClickToAssignAction": "You can right click on this button to assign an action to it.",
         "rightVertical": "Right Vertical",
         "saturation": "Saturation",
         "saturation4": "Sat",
