--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -773,6 +773,7 @@
         "LibrariesBrowser_NoClipTitled": "No clip titled '%{title}' was found.",
         "listenMMC": "Listen to MMC Input",
         "listenMTC": "Listen to MTC Input",
+        "localMachine": "Local Machine",
         "localPasteboardHistory": "Local Pasteboard History",
         "location": "Location",
         "loopPlayback": "Loop Playback",
@@ -848,6 +849,7 @@
         "noteCC": "Note/CC",
         "noteOff": "Note Off",
         "noteOn": "Note On",
+        "notesLocation": "Notes Location",
         "notificationsPanelLabel": "Notifications",
         "notificationsPanelTooltip": "Notifications Preferences",
         "notificationTestFailed": "Notification Test Failed",
@@ -972,6 +974,7 @@
         "rememberLastQuery": "Remember Last Query",
         "removeFromList": "Remove from List",
         "renameButton": "Rename Button",
+        "renameButtonQuestion": "What would you like to rename this button to?",
         "renderComplete": "Render Complete!",
         "replaceExistingFiles": "Replace Existing Files",
         "replaceSpaceWithUnderscore": "Replace Spaces with Underscores",
