--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -99,6 +99,7 @@
         "bugReport": "Bug Report",
         "button": "Button",
         "buttonLabel": "Button Label",
+        "buttons": "Buttons",
         "cancel": "Cancel",
         "changeBrowserClipHeightDown_title": "Browser Clip Height Decrease",
         "changeBrowserClipHeightUp_title": "Browser Clip Height Increase",
@@ -530,6 +531,7 @@
         "fcpx_transition_action": "Transitions",
         "fcpx_videoEffect_action": "Video Effects",
         "fcpx_widgets_action": "Touch Bar Widgets",
+        "fcpxmlEditor": "FCPXML Editor",
         "featureRequest": "Feature Request",
         "feedback": "Feedback",
         "feedbackError": "The following error occurred trying to communicate with the CommandPost servers:\n\n%{message}\n\nUnfortunately your feedback was not submitted.\n\nPlease try again.",
@@ -662,11 +664,14 @@
         "finalCutProPanelLabel": "Final Cut Pro",
         "finalCutProPanelTooltip": "Final Cut Pro Preferences",
         "finalCutProTimelineBatchExportMessage": "Final Cut Pro will export the %{clipCountString}selected %{itemString} in the timeline to the following location:",
+        "find": "Find",
         "finder": "Finder",
         "finder_dateandtime_label": "Finder: Date & Time",
         "finder_pasteboard_label": "Finder: Pasteboard Tools",
         "finder_texttools_label": "Text Tools",
         "finder_window_label": "Window Management",
+        "findNext": "Find Next",
+        "findPrevious": "Find Previous",
         "five": "5",
         "folder": "Folder",
         "forward": "Forward",
@@ -715,6 +720,7 @@
         "howCanWeHelp": "How can we help you?",
         "hud": "HUD",
         "hudButtonItem": "Button %{count} (%{title})",
+        "hudDropZoneText": "Drag any item from the Browser to here to load it in the below FCPXML Editor",
         "hudOptions": "HUD Options",
         "hue": "Hue",
         "hue4": "Hue",
@@ -773,6 +779,7 @@
         "LibrariesBrowser_NoClipTitled": "No clip titled '%{title}' was found.",
         "listenMMC": "Listen to MMC Input",
         "listenMTC": "Listen to MTC Input",
+        "loadFromPasteboard": "Load from Pasteboard",
         "localMachine": "Local Machine",
         "localPasteboardHistory": "Local Pasteboard History",
         "location": "Location",
@@ -849,6 +856,7 @@
         "noteCC": "Note/CC",
         "noteOff": "Note Off",
         "noteOn": "Note On",
+        "notes": "Notes",
         "notesLocation": "Notes Location",
         "notificationsPanelLabel": "Notifications",
         "notificationsPanelTooltip": "Notifications Preferences",
@@ -888,6 +896,7 @@
         "overrideValueInvalid": "The value you entered is not valid.\n\nPlease try again.",
         "pasteboard": "Pasteboard",
         "pasteboardBuffer": "Pasteboard Buffer",
+        "pasteboardEditor": "Pasteboard Editor",
         "pasteboardHistory_TimelineEmpty": "Unable to Paste into Timeline",
         "pasteboardHistory_TimelineEmptyInfo": "Nothing is currently loaded into the Timeline.",
         "pasteboardManager_CopyDisabled": "Unable to Copy.",
@@ -976,6 +985,8 @@
         "renameButton": "Rename Button",
         "renameButtonQuestion": "What would you like to rename this button to?",
         "renderComplete": "Render Complete!",
+        "replace": "Replace",
+        "replaceAll": "Replace All",
         "replaceExistingFiles": "Replace Existing Files",
         "replaceSpaceWithUnderscore": "Replace Spaces with Underscores",
         "reportATranslationMistake": "Report a Translation Mistake",
@@ -1039,6 +1050,8 @@
         "sendCrashData": "Send Crash Data (requires restart)",
         "sendTestNotification": "Send Test Notification",
         "sendToCompressor": "Send to Compressor",
+        "sendToFinalCutPro": "Send to Final Cut Pro",
+        "sendToPasteboard": "Send To Pasteboard",
         "setBrowserDurationTo": "Set Browser Duration to",
         "setFilenamePrefix": "Set Filename Prefix",
         "setIncrementalNumber": "Set Incremental Number",
@@ -1070,6 +1083,7 @@
         "shortcutAlreadyInUseByMacOS": "This shortcut combination is currently in use by macOS (i.e. it could be used by Screen Capture, Universal Access, and Keyboard Navigation keys).",
         "shortcutCouldNotBeTriggered": "This shortcut could not be triggered.\n\nPlease check that you valid shortcut keys assigned to command you've tried to trigger in the Final Cut Pro Command Editor and try again.",
         "shortcutDuplicateError": "You cannot use the same shortcut for multiple commands.",
+        "shortcutKeys": "Shortcut Keys",
         "shortcutPleaseTryAgain": "Please select a new key and/or modifier combination and try again.",
         "shortcutsGroup": "Group",
         "shortcutsPanelLabel": "Shortcuts",
