--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -565,6 +565,15 @@
         "finalcutpro_fullscreen_shortcuts_label": "Fullscreen Shortcuts",
         "finalCutPro_group": "Final Cut Pro",
         "finalcutpro_hud_label": "HUD",
+        "finalcutpro_hud_manager_label": "HUD: Manager",
+        "finalcutpro_hud_panels_fcpxml_label": "HUD: FCPXML Panel",
+        "finalcutpro_hud_panels_info_label": "HUD: Information Panel",
+        "finalcutpro_hud_panels_minimise_label": "HUD: Minimise Panel",
+        "finalcutpro_hud_panels_notes_label": "HUD: Notes Panel",
+        "finalcutpro_hud_panels_pasteboard_label": "HUD: Pasteboard Panel",
+        "finalcutpro_hud_panels_tenbuttons_label": "HUD: 10 Buttons",
+        "finalcutpro_hud_panels_twelvebuttons_label": "HUD: 12 Buttons",
+        "finalcutpro_hud_panels_twentyfourbuttons_label": "HUD: 24 Buttons",
         "finalcutpro_import_ignorecard_label": "Ignore Cards",
         "finalcutpro_import_preferences_label": "Import Preferences",
         "finalcutpro_inspector_show_label": "Inspector: Additional Actions",
