--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -1190,6 +1190,7 @@
         "unassigned": "Unassigned",
         "undo": "Undo",
         "uninstall": "Uninstall",
+        "unknown": "Unknown",
         "unknownError": "Unknown Error",
         "unmountExternalDrives_title": "Unmount External Drives",
         "unmountingExternalDrivesMsg": "Unmounting external drives...",
