--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -344,6 +344,8 @@
         "cpRevealInBrowserAndHighlight_title": "Reveal in Browser and Highlight",
         "cpRevealMulticamClipInAngleEditorAndHighlight_title": "Reveal Multicam Clip in Angle Editor",
         "cpRevealMulticamClipInBrowserAndHighlight_title": "Reveal Multicam Clip in Browser",
+        "cpRollingShutterDisable_title": "Disable Rolling Shutter",
+        "cpRollingShutterEnable_title": "Enable Rolling Shutter",
         "cpSaveKeywordPreset_customTitle": "Save Keyword Preset %{count}",
         "cpScrollingTimeline_title": "Toggle Scrolling Timeline",
         "cpSelectBackwards_title": "Select Clips Backwards",
@@ -652,7 +654,6 @@
         "finalcutpro_timeline_preferences_label": "Timeline: Preferences",
         "finalcutpro_timeline_renameclip_label": "Timeline: Rename Clip",
         "finalcutpro_timeline_selectalltimelineclips_label": "Timeline: Select All Timeline Clips",
-        "finalcutpro_timeline_stabilization_label": "Inspector: Stablization",
         "finalcutpro_timeline_titles_label": "Timeline: Titles",
         "finalcutpro_timeline_transitions_label": "Timeline: Transitions",
         "finalcutpro_timeline_videoeffects_label": "Timeline: Video Effects",
@@ -693,6 +694,7 @@
         "generalPanelLabel": "General",
         "generalPanelTooltip": "General Preferences",
         "generatedVoiceOver": "Generated Voice Over",
+        "generator": "Generator",
         "generator_group": "Generator",
         "getCommandPostPushoverAPIKey": "Create Application API Key",
         "getProwlAccount": "Signup for a Prowl Account",
@@ -1115,6 +1117,7 @@
         "skip": "Skip",
         "sound": "Sound",
         "spacing": "Spacing",
+        "stabilizationMethod": "Stabilization Method",
         "start": "Start",
         "startScan": "Start Scan",
         "stillFrames": "Still Frames",
