--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -207,6 +207,7 @@
         "core_preferences_panels_menubar_label": "Preferences Panel: Menubar",
         "core_preferences_panels_notifications_label": "Preferences: Notifications",
         "core_preferences_panels_plugins_label": "Preferences Panel: Plugins",
+        "core_preferences_panels_scripting_label": "Preferences Panel: Scripting",
         "core_preferences_panels_shortcuts_label": "Preferences Panel: Shortcuts",
         "core_preferences_panels_tangent_label": "Preferences Panel: Tangent",
         "core_preferences_updates_label": "Preferences: Updates",
@@ -458,11 +459,13 @@
         "empty": "Empty",
         "enable": "Enable",
         "enableAccessibility": "Enable Accessibility",
+        "enableAppleScriptSupport": "Enable AppleScript Support",
         "enableAutomaticScriptReloading": "Enable Automatic Script Reloading",
         "enableBackgroundRender": {
             "one": "Enable Background Render (%{count} sec)",
             "other": "Enable Background Render (%{count} secs)"
         },
+        "enableCommandLineSupport": "Enable Command Line Support",
         "enableCustomisedTouchBar": "Enable Customised Touch Bar",
         "enabled": "Enabled",
         "enableDeveloperMode": "Enable Developer Mode",
@@ -1033,6 +1036,8 @@
         "scanFinalCutProSetupOne": "CommandPost needs to scan your system for Final Cut Pro for Plugins & Motion Templates.",
         "scanFinalCutProSetupTwo": "Depending on how many plugins and effects you have installed, this can take several minutes.",
         "scanningInProgress": "Scanning in progress",
+        "scripting": "Scripting",
+        "scriptingTools": "Scripting Tools",
         "scrollingTimelineActivated": "Scrolling Timeline Activated",
         "scrollingTimelineDeactivated": "Scrolling Timeline Deactivated",
         "searchSubtext": "Search Subtext",
