--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -681,6 +681,8 @@
         "finder": "Finder",
         "finder_dateandtime_label": "Finder: Date & Time",
         "finder_pasteboard_label": "Finder: Pasteboard Tools",
+        "finder_preferences_panel_label": "Preferences Panel: Finder",
+        "finder_preferences_powerchime_label": "Power Chime Preference",
         "finder_texttools_label": "Text Tools",
         "finder_window_label": "Window Management",
         "findNext": "Find Next",
@@ -929,6 +931,7 @@
         "playback": "Playback",
         "playFromBeginning": "Play From Beginning",
         "playFullScreen": "Play Full Screen",
+        "playPowerChimeSound": "Play chime sound when laptop power is connected",
         "playSelection": "Play Selection",
         "playToEnd": "Play to End",
         "pleaseEnterAPrefix": "Please enter a prefix",
