--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -1083,6 +1083,7 @@
         "shadows": "Shadows",
         "shadows2": "SD",
         "shadows4": "Shdw",
+        "share": "Share",
         "shared": "Shared",
         "shareDetails_export": "Type: Local Export\nLocation: %{result}",
         "shareDetails_Facebook": "Type: Facebook\nLogin: %{login}\nTitle: %{title}",
@@ -1190,6 +1191,7 @@
         "touchBarResetConfirmation": "This will reset all modified Touch Bar items to the default values.",
         "touchBarSetupTip": "Make sure \"App Controls with Control Strip\" is selected within the \"Touch Bar shows\" Keyboard System Preferences to see the CommandPost icon.<br />You can then tap this icon to toggle through the different Touch Bar groups.",
         "touchBarWidget": "Touch Bar Widget",
+        "transition": "Transition",
         "transition_group": "Transition",
         "transmitMMC": "Transmit MMC",
         "transmitMTC": "Transmit MTC",
