--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -576,6 +576,7 @@
         "finalcutpro_hud_panels_minimise_label": "HUD: Minimise Panel",
         "finalcutpro_hud_panels_notes_label": "HUD: Notes Panel",
         "finalcutpro_hud_panels_pasteboard_label": "HUD: Pasteboard Panel",
+        "finalcutpro_hud_panels_search_label": "HUD: Search Panel",
         "finalcutpro_hud_panels_tenbuttons_label": "HUD: 10 Buttons",
         "finalcutpro_hud_panels_twelvebuttons_label": "HUD: 12 Buttons",
         "finalcutpro_hud_panels_twentyfourbuttons_label": "HUD: 24 Buttons",
@@ -764,6 +765,8 @@
         "invalidAPIKeysSupplied": "Invalid API Keys Supplied",
         "invalidFCPUIElement": "Invalid User Interface Element",
         "invalidProwlAPIKey": "Invalid Prowl API Key",
+        "invalidSearchField": "The search field looks invalid.",
+        "invalidSearchFieldDescription": "Please check what you've written in the search field and try again.",
         "item": {
             "one": "item",
             "other": "items"
@@ -865,6 +868,8 @@
         "noFCPUIElementDetected": "No existing Final Cut Pro User Interface Element Registered",
         "noGeneratorShortcut": "There is no Generator assigned to this shortcut.\n\nYou can assign Shortcuts via the CommandPost menu bar.",
         "noKeywordPresetsError": "It doesn't look like you've saved anything to this keyword preset yet?",
+        "noMatchesFound": "No matches found.",
+        "noMatchesFoundDescription": "We couldn't find any matches for the string you searched for. Please make sure all the rows you want to search are visible in the browser.",
         "none": "None",
         "noPluginFound": "Unable to find a ${plugin} called '${name}'.",
         "noPluginShortcut": "There is no ${plugin} assigned to this shortcut.\n\nYou can assign Shortcuts via the CommandPost menu bar.",
@@ -1043,6 +1048,8 @@
         "scriptingTools": "Scripting Tools",
         "scrollingTimelineActivated": "Scrolling Timeline Activated",
         "scrollingTimelineDeactivated": "Scrolling Timeline Deactivated",
+        "search": "Search",
+        "searchIn": "Search in",
         "searchSubtext": "Search Subtext",
         "second": {
             "one": "Second",
@@ -1059,6 +1066,8 @@
         "selectCompressorSettingsFile": "Select a Compressor Settings File:",
         "selectDestinationFolder": "Please select a Destination Folder:",
         "selectDestinationPreset": "Please select a Destination Preset:",
+        "selectedColumnNotShown": "The selected column could not be shown.",
+        "selectedColumnNotShownDescription": "Please make sure the notes column is visible and try again.",
         "selectFolderToWatch": "Please select a folder to watch:",
         "selectLeftAudioEdge": "Select Left Audio Edge",
         "selectLeftEdge": "Select Left Edge",
