--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -808,6 +808,7 @@
         "master": "Master",
         "master2": "MS",
         "master4": "Mstr",
+        "matchCase": "Match Case",
         "matchColor": "Match Color",
         "mattes": "Mattes",
         "media": "Media",
@@ -932,6 +933,7 @@
         "physical": "Physical",
         "pitchWheelChange": "Pitch Wheel Change",
         "play": "Play",
+        "playAfterFind": "Play After Find",
         "playAround": "Play Around",
         "playback": "Playback",
         "playFromBeginning": "Play From Beginning",
