--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -17,6 +17,8 @@
         "addedFCPUIElementToMIDI": "Registered Final Cut Pro User Interface Element to MIDI Control",
         "addedToCompressor": "Added to Compressor:",
         "addHueSatCurvesEffect": "Add Hue/Sat Curves Effect",
+        "addMarkersToSelectedClipInBrowserFromFrameIOCSV_title": "Add Markers to Selected Clip in Browser from Frame.io CSV",
+        "addMarkersToSelectedClipInBrowserFromFrameIOCSVCompleted": "Importing the CSV to markers has completed successfully.",
         "addTextToNotesFieldAfterImport": "Add to Notes Field After Import",
         "addWatchFolder": "Add Watch Folder",
         "advanced": "Advanced",
@@ -552,6 +554,7 @@
         "finalcutpro_browser_addnote_label": "Browser: Add Note",
         "finalcutpro_browser_appearanceandfiltering_label": "Browser: Appearance & Filtering",
         "finalcutpro_browser_duration_label": "Browser: Duration",
+        "finalcutpro_browser_frameiotomarkers_label": "Browser: Frame.io CSV to Markers",
         "finalcutpro_browser_height_label": "Browser: Clip Height",
         "finalcutpro_browser_keywords_label": "Browser: Keyword Features",
         "finalcutpro_browser_layouts_label": "Browser: Save & Restore Layouts",
@@ -931,6 +934,7 @@
         "percentage3": "PCT",
         "performBatchExport": "Perform Batch Export",
         "physical": "Physical",
+        "pickAFrameIOCSVFile": "Please pick a Frame.io CSV File",
         "pitchWheelChange": "Pitch Wheel Change",
         "play": "Play",
         "playAfterFind": "Play After Find",
@@ -983,6 +987,7 @@
         "prefix": "Prefix",
         "previous": "Previous",
         "privacy": "Privacy",
+        "problemProcessingCSV": "There was a problem processing the CSV file. Are you sure it's valid?",
         "programChange": "Program Change",
         "provideFeedback": "Provide Feedback",
         "prowlAPIKey": "Prowl API Key",
