--- a/src/extensions/cp/apple/finalcutpro/strings/fr/10.4.0.strings
+++ b/src/extensions/cp/apple/finalcutpro/strings/fr/10.4.0.strings
@@ -15,5 +15,7 @@
     <string>Intermédiaires</string>
     <key>CPColorBoardHighlights</key>
     <string>Tons clairs</string>
+    <key>CPCodecs</key>
+    <string>Codecs</string>
 </dict>
 </plist>
