--- a/src/extensions/cp/apple/finalcutpro/strings/zh_CN/10.4.0.strings
+++ b/src/extensions/cp/apple/finalcutpro/strings/zh_CN/10.4.0.strings
@@ -11,5 +11,7 @@
     <string>较好质量</string>
     <key>CPViewerViewBetterPerformance</key>
     <string>较高性能</string>
+    <key>CPCodecs</key>
+    <string>编解码器</string>
 </dict>
 </plist>
