--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -735,6 +735,7 @@
         "highlights2": "HL",
         "highlights4": "Hlgt",
         "histogram": "Histogram",
+        "historyIsEmpty": "History is empty",
         "horizontal": "Horizontal",
         "horizontal4": "Horz",
         "howCanWeHelp": "How can we help you?",
@@ -806,6 +807,7 @@
         "localPasteboardHistory": "Local Pasteboard History",
         "location": "Location",
         "loopPlayback": "Loop Playback",
+        "loopSearch": "Loop Search",
         "macOS": "macOS",
         "marker": "Marker",
         "master": "Master",
@@ -1234,6 +1236,7 @@
         "usingTheFollowingNamingConvention": "Using the following naming convention",
         "validate": "Validate",
         "value": "Value",
+        "openProjectAfterFind": "Open Project After Find",
         "vectorscope": "Vectorscope",
         "version": "Version",
         "vertical": "Vertical",
