--- a/src/extensions/cp/apple/finalcutpro/strings/ja/10.4.0.strings
+++ b/src/extensions/cp/apple/finalcutpro/strings/ja/10.4.0.strings
@@ -13,5 +13,7 @@
     <string>パフォーマンス優先</string>
     <key>CPColorBoardMidtones</key>
     <string>中間色調</string>
+    <key>CPCodecs</key>
+    <string>コーデック</string>
 </dict>
 </plist>
