--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -32,6 +32,7 @@
         "alignTextToTheRight_title": "Align text to the right",
         "all": "All",
         "allowZoomingWithModifierKey": "Enable Timeline Zooming with Mouse Scroll & Modifier Key",
+        "allVisibleColumns": "All Visible Columns",
         "alreadyWatched": "This folder is already being watched.",
         "always": "Always",
         "alwaysOnTop": "Always On Top",
@@ -494,6 +495,7 @@
         "enterFinderTag": "Please enter the Finder Tag you want to use:",
         "enterFinderTagError": "This Finder Tag looks invalid.\n\nPlease try again.",
         "errorLog": "Error Log",
+        "exactMatch": "Exact Match",
         "expandAudio": "Expand Audio",
         "exposure": "Exposure",
         "extendEdit": "Extend Edit",
@@ -815,6 +817,7 @@
         "master4": "Mstr",
         "matchCase": "Match Case",
         "matchColor": "Match Color",
+        "matchWords": "Match Words",
         "mattes": "Mattes",
         "media": "Media",
         "mediaImport": "Media Import",
@@ -910,6 +913,7 @@
         "openErrorLogOnDockClick": "Open Error Log on Dock Icon Click",
         "openMessages": "Open Messages",
         "openPrivacyPolicy": "Open Privacy Policy",
+        "openProjectAfterFind": "Open Project After Find",
         "openTangentMapper": "Open Tangent Mapper",
         "openVoiceOverUtility": "Open Voice Over Utility",
         "options": "Options",
@@ -1236,7 +1240,6 @@
         "usingTheFollowingNamingConvention": "Using the following naming convention",
         "validate": "Validate",
         "value": "Value",
-        "openProjectAfterFind": "Open Project After Find",
         "vectorscope": "Vectorscope",
         "version": "Version",
         "vertical": "Vertical",
@@ -1273,6 +1276,7 @@
         "whatStepsToRecreate": "What are the steps to recreate the problem?",
         "whatWentWrong": "What went wrong?",
         "white": "White",
+        "wholeWords": "Whole Words",
         "windowManagement": "Window Management",
         "xml": "XML",
         "yellow": "Yellow",
