--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -861,6 +861,7 @@
         "mountExternalDrives_title": "Mount External Drives",
         "mountingExternalDrivesMsg": "Mounting external drives...",
         "mouseLocation": "Centre of Mouse Location",
+        "moveableMarkers": "Moveable Markers",
         "mustInstallTangentMapper": "You must install the Tangent Mapper & Hub to enable Tangent Panel support.",
         "mute": "Mute",
         "mute10": "Mute",
