--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -1066,6 +1066,7 @@
         "search": "Search",
         "searchAborted": "The search has been aborted.",
         "searchAbortedDescription": "The search failed to find anything after searching 500 cells, so we've aborted it.\n\nYou can try using a Smart Collection or use the 'Filter Browser Before Search' option in the HUD Search Panel to narrow your selection in the Browser.",
+        "searchEntireLibrary": "Search Entire Library",
         "searchIn": "Search in",
         "searchSubtext": "Search Subtext",
         "second": {
