--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -86,6 +86,8 @@
         "betterQuality": "Better Quality",
         "black": "Black",
         "blade": "Blade",
+        "blendMode": "Blend Mode",
+        "blendMode9": "BlendMode",
         "blue": "Blue",
         "bottomHorizontal": "Bottom Horizontal",
         "breakApartClipItems": "Break Apart Clip Items",
